# django-extra-field-validation

./: .bumpversion.cfg  .coveragerc  .fussyfox.yml  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .pypirc  .travis.yml  CHANGELOG.md  LICENSE-MIT  MANIFEST.in  Makefile  README.md  README.rst  coverage.xml  index.html  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml  delete-merged-branch-config.yml
.github/workflows/: auto-approve.yml  changelog.yml  codacy-analysis.yml  codeql.yml  deploy.yml  gh-pages.yml  lint.yml  release.yml  test.yml  update-doc-assets.yml  update-readme.yml
demo/: apps.py  models.py
demo/migrations/: 0001_initial.py
django_dynamic_model_validation/: settings.py  urls.py  wsgi.py
django_extra_field_validation/: settings.py  wsgi.py
docs/: README.md  index.html
dynamic_validator/: __init__.py  apps.py  tests.py
dynamic_validator/field_validation/: __init__.py  validator.py
dynamic_validator/mixin/: model_field_validator.py
extra_validator/: __init__.py  apps.py
extra_validator/field_validation/: validator.py
pip-wheel-metadata/django_dynamic_model_validation.dist-info/: LICENSE-APACHE  METADATA  top_level.txt
