[metadata]
name = 'django-dynamic-model-validation'
version = '0.0.1'
description = ''
author = 'Tonye Jack'
author_email = 'jtonye@ymail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/django-dynamic-model-validation'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
